completed challenge number 1 and now 2

--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <action selector="sendMailButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="kvi-jt-mir"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j39-ox-aec">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="179" width="202" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="bOu-UC-2hN"/>
                                 <exclude reference="gI8-bS-g1l"/>
                                 <exclude reference="xhq-re-en9"/>
+                                <exclude reference="j39-ox-aec"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="bOu-UC-2hN"/>
                                 <include reference="gI8-bS-g1l"/>
                                 <include reference="xhq-re-en9"/>
+                                <include reference="j39-ox-aec"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="z2V-p2-eEa" id="Zvd-do-a9n"/>
                         <outlet property="mailButton" destination="xhq-re-en9" id="qIm-dp-SLT"/>
                         <outlet property="messageLabel" destination="gI8-bS-g1l" id="y0e-JT-fJL"/>
+                        <outlet property="nameLabel" destination="j39-ox-aec" id="bxQ-lC-N5W"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
